Add SendEventTimerTask work like setTimeout of JS, support retry in another thread Add ReactNativeJson to convert Java Map to Facebook WritableMap Can pass event onNotificationReceived to JS

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-native-pushdy",
   "title": "React Native Pushdy",
-  "version": "1.0.0",
-  "description": "TODO",
+  "version": "0.0.3",
+  "description": "Pushdy Sdk implement for React Native",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,8 +16,8 @@
     "react-native"
   ],
   "author": {
-    "name": "Your Name",
-    "email": "yourname@email.com"
+    "name": "MobileTech",
+    "email": "contact@mobiletech.vn"
   },
   "license": "MIT",
   "licenseFilename": "LICENSE",
