--- a/android/build.gradle
+++ b/android/build.gradle
@@ -76,6 +76,7 @@ repositories {
 dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'  // From node_modules
+    implementation 'com.google.code.gson:gson:2.8.6'
     api 'com.github.Pushdy:android-pushdy-sdk:0.0.3'
 }
 
