--- a/android/build.gradle
+++ b/android/build.gradle
@@ -79,8 +79,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     // api project(':android-pushdy-sdk')      // Install this lib from local folder, require to uncomment the setting in settings.gradle
-    // api 'com.github.Pushdy:android-pushdy-sdk:master-SNAPSHOT'
-    api 'com.github.Pushdy:android-pushdy-sdk:0.0.15'
+    api 'com.github.Pushdy:android-pushdy-sdk:master-SNAPSHOT'
+    // api 'com.github.Pushdy:android-pushdy-sdk:0.0.15'
 }
 
 def configureReactNativePom(def pom) {
