--- a/android/build.gradle
+++ b/android/build.gradle
@@ -78,9 +78,9 @@ dependencies {
     implementation 'com.facebook.react:react-native:+'  // From node_modules
     implementation 'com.google.code.gson:gson:2.8.6'
 
-    // api project(':android-pushdy-sdk')      // Install this lib from local folder, require to uncomment the setting in settings.gradle
+    api project(':android-pushdy-sdk')      // Install this lib from local folder, require to uncomment the setting in settings.gradle
     // api 'com.github.Pushdy:android-pushdy-sdk:master-SNAPSHOT'
-    api 'com.github.Pushdy:android-pushdy-sdk:1.2.1'
+    // api 'com.github.Pushdy:android-pushdy-sdk:1.2.1'
 }
 
 def configureReactNativePom(def pom) {
